--- a/maintenance/index.html
+++ b/maintenance/index.html
@@ -3,16 +3,16 @@
 <head>
     <title>Down for Maintenance</title>
   
-    <link href="https://www.stanford.edu/su-identity/css/su-identity.css" rel="stylesheet">
+    <link href="/static/css/su-identity.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet" type="text/css">
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <!--[if IE 8]>
-      <link rel="stylesheet" type="text/css" href="https://www.stanford.edu/su-identity/css/ie/ie8.css" />
+      <link rel="stylesheet" type="text/css" href="/static/css/ie/ie8.css" />
     <![endif]-->
     <!--[if IE 7]>
-      <link rel="stylesheet" type="text/css" href="https://www.stanford.edu/su-identity/css/ie/ie7.css" />
+      <link rel="stylesheet" type="text/css" href="/static/css/ie/ie7.css" />
     <![endif]-->
     
     <style>
@@ -68,7 +68,7 @@
             <div id="brandbar">
               <div class="container">
                 <a href="http://www.stanford.edu">
-                  <img src="https://www.stanford.edu/su-identity/images/brandbar-stanford-logo@2x.png" alt="Stanford University" width="152" height="23">
+                  <img src="/static/images/brandbar-stanford-logo@2x.png" alt="Stanford University" width="152" height="23">
                 </a>
               </div> <!-- .container end -->
             </div> <!-- #brandbar end -->
@@ -90,7 +90,7 @@
         <div class="row">
           <div id="bottom-logo" class="span2">
             <a href="http://www.stanford.edu">
-              <img src="https://www.stanford.edu/su-identity/images/footer-stanford-logo@2x.png" alt="Stanford University" width="105" height="49"/>
+              <img src="/static/images/footer-stanford-logo@2x.png" alt="Stanford University" width="105" height="49"/>
             </a>
           </div>
           <!-- #bottom-logo end -->
